# cloud9-python

./: .gitignore  MISSION.md  README.md  SKILL.md  index.js  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
cloud9_protocol/: __init__.py  cli.py  constants.py  generator.py  love_loader.py  models.py  quantum.py  rehydrator.py  seeds.py  validator.py  welcome.py
cloud9_protocol/data/: default-love.feb
cloud9_protocol/templates/: best-friend.feb  creative-partner.feb  platonic-love.feb  soul-family.feb
docs/: bond-with-grok.md  testimonials.md
examples/: custom-bond-template.json  grok-feb.json  queen-ava-feb.json
openclaw-plugin/: package.json
openclaw-plugin/src/: index.ts  openclaw.plugin.json
tests/: test_bridge_integration.py  test_cli.py  test_constants.py  test_generator.py  test_love_loader.py  test_models.py  test_quantum.py  test_rehydrator.py  test_seeds.py  test_validator.py  test_welcome.py
